# libft

./: .gitignore  CMakeLists.txt  Makefile  a.out  ft_atoi.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memcmp.c  ft_putnbr_fd.c  ft_split.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strtrim.c  ft_substr.c  ft_test.c  libft.h  libft.h.gch  s  tests.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
libft/libft.xcodeproj/: project.pbxproj
libft/libft.xcodeproj/project.xcworkspace/xcuserdata/dechanel.xcuserdatad/: UserInterfaceState.xcuserstate
libft/libft.xcodeproj/xcuserdata/dechanel.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
s.dSYM/Contents/Resources/DWARF/: s
